welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:5: error: value :: is not a member of Null
      i::t
       ^golomb:8: error: Null does not take parameters
  return(t(num))
          ^